correction final